Title and ID uniqueness checking

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -123,7 +123,7 @@
       <div class="card-header sticky-lg-top bg-label-secondary d-flex justify-content-sm-between align-items-sm-center flex-column flex-sm-row z-2 border-bottom">
         <h5 class="card-title mb-sm-0 me-sm-2">Preview</h5>
         <div class="action-btns d-flex align-items-center w-100 w-sm-auto gap-2">
-          <input id="formTitle" type="text" class="form-control form-control-sm" value="{{form.title}}" placeholder="Form Title" />
+          <input id="formTitle" type="text" class="form-control form-control" value="{{form.title}}" placeholder="Form Title" />
           <button id="saveBtn" class="btn btn-success">Save</button>
         </div>
       </div>
