Removed unused fields

--- a/views/partials/fields/email.hbs
+++ b/views/partials/fields/email.hbs
@@ -2,5 +2,5 @@
   <label class="form-label">
     {{label}}{{#if required}} <span class="text-danger">*</span>{{/if}}
   </label>
-  <input class="form-control {{customClass}}" type="email" name="{{name}}" placeholder="{{placeholder}}" {{#if required}}required{{/if}}>
+  <input class="form-control" type="email" name="{{name}}" placeholder="{{placeholder}}" {{#if required}}required{{/if}}>
 </div>
