--- a/views/partials/fields/phone.hbs
+++ b/views/partials/fields/phone.hbs
@@ -3,7 +3,7 @@
     {{label}}{{#if required}} <span class="text-danger">*</span>{{/if}}
   </label>
   <!-- added js-intl-tel class -->
-  <input class="form-control {{customClass}} js-intl-tel"
+  <input class="form-control js-intl-tel"
          type="tel"
          name="{{name}}"
          placeholder="{{placeholder}}"
