--- a/views/partials/fields/select.hbs
+++ b/views/partials/fields/select.hbs
@@ -2,7 +2,7 @@
   <label class="form-label">
     {{label}}{{#if required}} <span class="text-danger">*</span>{{/if}}
   </label>
-  <select class="form-select {{customClass}}" name="{{name}}" {{#if required}}required{{/if}}>
+  <select class="form-select" name="{{name}}" {{#if required}}required{{/if}}>
     {{#each options}}<option value="{{this}}">{{this}}</option>{{/each}}
   </select>
 </div>
