Modularize builder.js

--- a/views/builder.hbs
+++ b/views/builder.hbs
@@ -127,9 +127,10 @@
   <!-- Provide utils URL like the client page -->
   <script>
     window.INTL_UTILS_URL = "https://cdn.jsdelivr.net/npm/intl-tel-input@18.2.1/build/js/utils.js";
+    // Enable modular Builder boot
+    window.BUILDER_USE_MODULAR = true;
   </script>
 
   <script src="/js/builder.js"></script>
 {{/section}}
-
 
