Redo DnD to SortableJS

--- a/views/builder.hbs
+++ b/views/builder.hbs
@@ -131,6 +131,8 @@
     window.BUILDER_USE_MODULAR = true;
   </script>
 
+  <!-- SortableJS for robust drag-and-drop reordering -->
+  <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.2/Sortable.min.js"></script>
+
   <script src="/js/builder.js"></script>
 {{/section}}
-
