Feature: Added more field types

--- a/views/builder.hbs
+++ b/views/builder.hbs
@@ -31,18 +31,19 @@
           <div class="mb-3">
             <label class="form-label">Add Fields</label>
             <div id="quickAddButtons" class="row g-2 align-items-stretch">
-              <div class="col-6 d-flex"><button type="button" class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start" data-type="singleLine"><i class="icon-base ti tabler-forms icon-sm me-2"></i><span class="text-start">Single Line Text</span></button></div>
-              <div class="col-6 d-flex"><button type="button" class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start" data-type="paragraph"><i class="icon-base ti tabler-article icon-sm me-2"></i><span class="text-start">Paragraph Text</span></button></div>
+              <div class="col-6 d-flex"><button type="button" class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start" data-type="singleLine"><i class="icon-base ti tabler-forms icon-sm me-2"></i><span class="text-start">Single Line</span></button></div>
+              <div class="col-6 d-flex"><button type="button" class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start" data-type="paragraph"><i class="icon-base ti tabler-article icon-sm me-2"></i><span class="text-start">Paragraph</span></button></div>
               <div class="col-6 d-flex"><button type="button" class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start" data-type="dropdown"><i class="icon-base ti tabler-list icon-sm me-2"></i><span class="text-start">Dropdown</span></button></div>
-              <div class="col-6 d-flex"><button type="button" class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start" data-type="multipleChoice"><i class="icon-base ti tabler-list-check icon-sm me-2"></i><span class="text-start">Multiple Choice</span></button></div>
+              <div class="col-6 d-flex"><button type="button" class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start" data-type="multipleChoice"><i class="icon-base ti tabler-list-check icon-sm me-2"></i><span class="text-start">Multi-choice</span></button></div>
               <div class="col-6 d-flex"><button type="button" class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start" data-type="checkboxes"><i class="icon-base ti tabler-square-rounded-check icon-sm me-2"></i><span class="text-start">Checkboxes</span></button></div>
               <div class="col-6 d-flex"><button type="button" class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start" data-type="number"><i class="icon-base ti tabler-list-numbers icon-sm me-2"></i><span class="text-start">Number</span></button></div>
               <div class="col-6 d-flex"><button type="button" class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start" data-type="name"><i class="icon-base ti tabler-user icon-sm me-2"></i><span class="text-start">Name</span></button></div>
               <div class="col-6 d-flex"><button type="button" class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start" data-type="email"><i class="icon-base ti tabler-mail icon-sm me-2"></i><span class="text-start">Email</span></button></div>
-              <div class="col-6 d-flex"><button type="button" class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start" data-type="phone"><i class="icon-base ti tabler-phone icon-sm me-2"></i><span class="text-start">Phone Number</span></button></div>
-              <div class="col-6 d-flex"><button type="button" class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start" data-type="multipleChoice" data-label="Yes / No" data-options="Yes,No"><i class="icon-base ti tabler-list-check icon-sm me-2"></i><span class="text-start">Yes / No</span></button></div>
+              <div class="col-6 d-flex"><button type="button" class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start" data-type="phone"><i class="icon-base ti tabler-phone icon-sm me-2"></i><span class="text-start">Phone</span></button></div>
+              <div class="col-6 d-flex"><button type="button" class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start" data-type="multipleChoice" data-label="Yes / No" data-options="Yes,No"><i class="icon-base ti tabler-list-check icon-sm me-2"></i><span class="text-start">Yes/No</span></button></div>
               <div class="col-6 d-flex"><button type="button" class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start" data-type="multipleChoice" data-label="NPS (1-10)" data-options="1,2,3,4,5,6,7,8,9,10"><i class="icon-base ti tabler-chart-pie icon-sm me-2"></i><span class="text-start">NPS (1-10)</span></button></div>
-            </div>
+              <div class="col-6 d-flex"><button type="button" class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start" data-type="dropdown" data-label="Issue Type" data-options="Billing,Bug,Feature Request,Other"><i class="icon-base ti tabler-list-details icon-sm me-2"></i><span class="text-start">Issue Type</span></button></div>
+              <div class="col-6 d-flex"><button type="button" class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start" data-type="checkboxes" data-label="Consent" data-options="I agree to the terms"><i class="icon-base ti tabler-square-rounded-check icon-sm me-2"></i><span class="text-start">Consent</span></button></div>
             </div>
           </div>
         </div>
@@ -139,5 +140,4 @@
 
   <script src="/js/builder.js"></script>
 {{/section}}
-
 
